--- a/Style.css
+++ b/Style.css
@@ -6,11 +6,9 @@
 	height: 50vh;
 	padding: 50px;
 	margin-bottom: 30px;
-	/*background-color: bisque;*/
 	margin: auto;
 	background-image: url("img.jpg"), radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 	background-blend-mode: multiply;
-	/*background-image: url(img.jpg); */
 	background-size: cover;
 }
 
@@ -26,6 +24,7 @@ h3{
 label{
 	width: 40px;
 	display: inline-block;
+	font-weight: 600;
 }
 
 h2{
